--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ width: 100%;
 margin: 0px;
 }
 
-#status
+#status, #number_of_object
 {
 font-size: 18px;
 }
@@ -19,4 +19,5 @@ body{
 canvas{
     box-shadow: 10px 10px 20px black;
     border-radius: 10px;
+    margin-top: 30px;
 }
